objects/admin__c.object
<CustomObject>
    <fields>
        <fullName>CO__c</fullName>
        <label>CO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <label>DMS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LABS__c</fullName>
        <label>LABS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM__c</fullName>
        <label>OM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <label>PS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reg_num__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reg num</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>admins</relationshipLabel>
        <relationshipName>admins</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_name__c</fullName>
        <formula>IF( Reg_num__r.Name__c  = &apos;testing&apos;,   Reg_num__r.Name__c,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK__c</fullName>
        <label>WORK</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>admin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Reg_num__c</columns>
        <columns>NAME</columns>
        <columns>WORK__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>admins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>co_rule</fullName>
        <active>true</active>
        <errorConditionFormula>CO__c &gt;18</errorConditionFormula>
        <errorDisplayField>CO__c</errorDisplayField>
        <errorMessage>Enter value b/n0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dms_rule</fullName>
        <active>true</active>
        <errorConditionFormula>DMS__c &gt;18</errorConditionFormula>
        <errorDisplayField>DMS__c</errorDisplayField>
        <errorMessage>Enter the days between 0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ip_rule</fullName>
        <active>true</active>
        <errorConditionFormula>IP__c &gt;18</errorConditionFormula>
        <errorDisplayField>IP__c</errorDisplayField>
        <errorMessage>Enter value b/n0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lab_rule</fullName>
        <active>true</active>
        <errorConditionFormula>LABS__c &gt;18</errorConditionFormula>
        <errorDisplayField>LABS__c</errorDisplayField>
        <errorMessage>Enter value b/n0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>om_rule</fullName>
        <active>true</active>
        <errorConditionFormula>OM__c &gt;18</errorConditionFormula>
        <errorDisplayField>OM__c</errorDisplayField>
        <errorMessage>Enter value b/n0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ps_rule</fullName>
        <active>true</active>
        <errorConditionFormula>PS__c &gt;18</errorConditionFormula>
        <errorDisplayField>PS__c</errorDisplayField>
        <errorMessage>Enter value b/n0 to 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>work_rule</fullName>
        <active>false</active>
        <errorConditionFormula>TOTAL__c &gt; WORK__c</errorConditionFormula>
        <errorDisplayField>WORK__c</errorDisplayField>
        <errorMessage>total must be lessthan working days</errorMessage>
    </validationRules>
</CustomObject>